--- a/micro-service-watchinator.yaml
+++ b/micro-service-watchinator.yaml
@@ -10,4 +10,4 @@ namespace: watchinator
 image:
   repository: smartcitiesdata/micro-service-watchinator
   tag: 2.1.1
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
