--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+# Terraform outputs
 .terraform/
 outputs/
 terraform.tfstate.d/
-*.out
-*.plan
+
+# Helm outputs
+charts/
+
+# Developer specified ignores
+plans/
+**/*.zip
+**/*.plan
+**/*.out
+
+# Filesystem and editor ignores
+*.swp
 .DS_Store
